--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 .header {
+    width: 100%;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -21,7 +22,7 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: #dcd6d6;
 }
 
 .header div {
@@ -51,12 +52,22 @@ p {
 }
 
 .hero {
-    height: 800px;
+    position: relative;
     width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
+    height: 800px;
+}
+
+.hero img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
 }
 
 .float-left {
@@ -73,13 +84,15 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    float: left;
 }
 
 .benefits {
     margin-right: 20px;
     padding: 20px;
-    clear: both;
+    /* clear: both; */
     float: right;
+    display: inline-block;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
