--- a/assets/style.css
+++ b/assets/style.css
@@ -1,26 +1,31 @@
+/* Reset box sizing and margins for all elements */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Set the background color for the entire body */
 body {
-    background-color: #d9dcd6;
+    background-color: #d9dcd6; 
 }
 
+/* Styling for the header section */
 .header {
-    width: 100%;
-    padding: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    width: 100%; 
+    padding: 20px; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+    background-color: #2a607c; 
+    color: #ffffff; 
 }
 
+/* Styling for the header's main heading */
 .header h1 {
-    display: inline-block;
-    font-size: 48px;
+    display: inline-block; 
+    font-size: 48px; 
 }
 
+/* Set a different color for letters 'seo' */
 .header h1 .seo {
     color: #dcd6d6;
 }
