--- a/assets/style.css
+++ b/assets/style.css
@@ -153,14 +153,8 @@ p {
 }
 
 /* Styling for service section images */
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
