--- a/assets/style.css
+++ b/assets/style.css
@@ -175,7 +175,7 @@ p {
     text-align: center;
 }
 
-/* Stying for footer headings */
+/* Styling for footer headings */
 .footer h2 {
     font-size: 20px;
 }
